Bug 128631 - GTK3: No mouse interaction with security warning dialog in embedded file
Summary: GTK3: No mouse interaction with security warning dialog in embedded file
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: LibreOffice (show other bugs)
Version:
(earliest affected)
6.2.0.0.alpha0+
Hardware: All All
: medium normal
Assignee: Not Assigned
URL:
Whiteboard: target:6.4.0 target:6.3.4
Keywords:
Depends on:
Blocks: GTK3
  Show dependency treegraph
 
Reported: 2019-11-06 13:24 UTC by Xisco Faulí
Modified: 2021-02-02 08:37 UTC (History)
2 users (show)

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Xisco Faulí 2019-11-06 13:24:27 UTC
Steps to reproduce:
1. Open attachment 46710 [details] from bug 35957
2. Double click on the object -> Security warning dialog is prompted
3. Try to interact with the dialog with the mouse or click somewhere else on the screen

-> Nothing happens, the focus is grabbed. Not happening with a gen environment. Keyboard works...

The dialog started to be prompted after https://cgit.freedesktop.org/libreoffice/core/commit/?id=1115a60e6d825c049680e7f2caf318e36d481b12

Reproduced in

Version: 6.4.0.0.alpha1+
Build ID: ee909ca2c02f949605f68720c3f1eef658502749
CPU threads: 4; OS: Linux 4.15; UI render: default; VCL: gtk3; 
Locale: ca-ES (ca_ES.UTF-8); UI-Language: en-US
Calc: threaded
Comment 1 Xisco Faulí 2019-11-06 13:25:06 UTC
@Caolán, I thought you might be interested in this issue...
Comment 2 Caolán McNamara 2019-11-06 14:57:39 UTC
right click, edit... however doesn't suffer from the problem
Comment 3 Caolán McNamara 2019-11-06 15:03:22 UTC
https://gerrit.libreoffice.org/#/c/82143/
Comment 4 Commit Notification 2019-11-06 19:51:15 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/913b2530fff20bacb0cbb8e51be29b42983d56c8

Resolves: tdf#128631 dispatch active ole async

It will be available in 6.4.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 5 Caolán McNamara 2019-11-06 19:52:25 UTC
fixed in master, backport to 6-3 in gerrit
Comment 6 Xisco Faulí 2019-11-07 09:57:54 UTC
Verified in

Version: 6.4.0.0.alpha1+
Build ID: b19c5d4286f66193173534980d18992682905e26
CPU threads: 4; OS: Linux 4.15; UI render: default; VCL: gtk3; 
Locale: ca-ES (ca_ES.UTF-8); UI-Language: en-US
Calc: threaded

@Caolán, thanks for fixing this issue!!
Comment 7 Commit Notification 2019-11-07 09:59:09 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "libreoffice-6-3":

https://git.libreoffice.org/core/commit/6294a9cf96ea562cc6aac43cfc15761e1188a951

Resolves: tdf#128631 dispatch active ole async

It will be available in 6.3.4.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.