Resolves: tdf#128631 dispatch active ole async

like we do for the other things that might create dialogs

Change-Id: I31ca267526ddeac8d0c7163af45c11be7750cb4c